[package]
name = "dr-seq-core"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Grid-based drum sequencer"
license = "MIT"
default-run = "dr-seq-core"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs", "standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug" }
atomic_float = "0.1"
serde = { version = "1.0", features = ["derive"] }
