[package]
name = "dr-seq-core"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Grid-based drum sequencer"
license = "MIT"
default-run = "dr-seq-core"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/BillyDM/nih-plug", features = [
    "assert_process_allocs",
    "standalone",
] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug" }
atomic_float = "1.0.0"
serde = { version = "1.0.205", features = ["derive"] }
dr-seq-engine = { path = "../dr-seq-engine" }

[features]
dummy-audio = []
