[package]
name = "dr-seq-core"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Grid-based drum sequencer"
license = "MIT"
default-run = "dr-seq-core"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git",
    rev = "7e7f63049dc2250fa755bc45acb1badce8c7bd4c",
    features = [
    "assert_process_allocs",
    "standalone",
] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug" }
atomic_float = "1.1.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
dr-seq-engine = { path = "../dr-seq-engine" }

[features]
dummy-audio = []

[lints.rust]
missing_docs = "warn"
