[package]
name = "dr-seq-engine"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Drum sequencer engine"
license = "MIT"

[dependencies]
heapless = "0.9.2"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_arrays = "0.2.0"
