[package]
name = "dr-seq-vst3"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Rockstedt <info@sourcebox.de>"]
description = "Grid-based drum sequencer VST3 plugin"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nice-plug = { git = "https://codeberg.org/BillyDM/nice-plug.git",
    rev = "7e7f63049dc2250fa755bc45acb1badce8c7bd4c",
}
dr-seq-core = { path = "../dr-seq-core" }

[features]
dummy-audio = []
