[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
description = "A helper for compiling and bundling plugins, can be invoked in this repo using `cargo xtask`"
license = "ISC"

[dependencies]
nice-plug-xtask = { git = "https://codeberg.org/BillyDM/nice-plug.git" }
